--- a/index.html
+++ b/index.html
@@ -6,6 +6,37 @@
     <link rel="stylesheet" href="./styles.css" />
     <title>G3 Architects</title>
   </head>
-  <body></body>
+  <body>
+    <!-- header section -->
+    <header>
+      <!-- navber section -->
+      <nav>
+        <section class="nav">
+          <h2>G3 Architects</h2>
+          <div>
+            <ul>
+              <li><a href="">Home</a></li>
+              <li><a href="">About</a></li>
+              <li><a href="">Contact Us</a></li>
+              <li><a href="">Log in</a></li>
+            </ul>
+          </div>
+        </section>
+      </nav>
+      <!-- banner section -->
+      <section class="banner">
+        <h2>
+          Brand New <br />
+          Group of Architects
+        </h2>
+        <p>
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomised words which don't look even
+        </p>
+        <button>Explore More</button>
+        <img src="./assects/banner.png" alt="" />
+      </section>
+    </header>
+  </body>
 </html>
-git add .
