added quick list section with responsive

--- a/index.html
+++ b/index.html
@@ -38,5 +38,26 @@
         <img src="./assects/banner.png" alt="" />
       </section>
     </header>
+    <!-- quick-list section -->
+    <section class="quick-list">
+      <div class="quick-list-img">
+        <img src="./assects/team1.png" alt="" />
+        <img src="./assects/team2.png" alt="" />
+        <img src="./assects/team3.png" alt="" />
+        <img src="./assects/team4.png" alt="" />
+      </div>
+      <div class="quick-list-text">
+        <h3>
+          <span class="dark">Quick list</span> <span class="black">of Our</span>
+          <span class="orange">Features</span>
+        </h3>
+        <p>
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomised words which don't look even
+        </p>
+        <button>Explore More</button>
+      </div>
+    </section>
   </body>
 </html>
