--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
+    <link
+      rel="shortcut icon"
+      href="./assects/icons8-architect-16.png"
+      type="image/x-icon"
+    />
     <title>G3 Architects</title>
   </head>
   <body>
@@ -57,6 +62,59 @@
           humour, or randomised words which don't look even
         </p>
         <button>Explore More</button>
+      </div>
+    </section>
+    <!-- features section -->
+    <section class="features-section">
+      <!-- features text -->
+      <div class="features-text">
+        <h2>Features you will love & enjoy</h2>
+        <p>
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomised words which don't look even
+        </p>
+        <!-- feature -->
+        <div class="feature">
+          <h4>Dexktop & Mobile Version</h4>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised...........
+          </p>
+        </div>
+        <div class="feature">
+          <h4>Drag & Drop Builder</h4>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised...........
+          </p>
+        </div>
+        <div class="feature">
+          <h4>Awesome Modern Design</h4>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised...........
+          </p>
+        </div>
+        <div class="feature">
+          <h4>Super Easy to Edit</h4>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised...........
+          </p>
+        </div>
+      </div>
+      <!-- feature img -->
+      <div class="feature-img">
+        <img src="./assects/architect.png" alt="" />
+        <div class="experience">
+          <h3>10+ Years</h3>
+          <span>Experience</span>
+        </div>
       </div>
     </section>
   </body>
