added facts section with responsive

--- a/index.html
+++ b/index.html
@@ -117,5 +117,37 @@
         </div>
       </div>
     </section>
+    <!-- facts section -->
+    <section class="facts">
+      <div class="facts-text">
+        <h2>Some Facts</h2>
+        <p>
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration.
+        </p>
+      </div>
+      <div class="facts-card">
+        <div class="fact-card">
+          <img src="./assects/icons/ribon.png" alt="" />
+          <h3>54</h3>
+          <span>Awards Winnings</span>
+        </div>
+        <div class="fact-card">
+          <img src="./assects/icons/projects.png" alt="" />
+          <h3>1458</h3>
+          <span>Project Finished</span>
+        </div>
+        <div class="fact-card">
+          <img src="./assects/icons/customers.png" alt="" />
+          <h3>590</h3>
+          <span>Clients Worked</span>
+        </div>
+        <div class="fact-card">
+          <img src="./assects/icons/email.png" alt="" />
+          <h3>22578</h3>
+          <span>Email Send</span>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
