added sponsors & footer section with responsive

--- a/index.html
+++ b/index.html
@@ -43,111 +43,135 @@
         <img src="./assects/banner.png" alt="" />
       </section>
     </header>
-    <!-- quick-list section -->
-    <section class="quick-list">
-      <div class="quick-list-img">
-        <img src="./assects/team1.png" alt="" />
-        <img src="./assects/team2.png" alt="" />
-        <img src="./assects/team3.png" alt="" />
-        <img src="./assects/team4.png" alt="" />
-      </div>
-      <div class="quick-list-text">
-        <h3>
-          <span class="dark">Quick list</span> <span class="black">of Our</span>
-          <span class="orange">Features</span>
-        </h3>
-        <p>
-          There are many variations of passages of Lorem Ipsum available, but
-          the majority have suffered alteration in some form, by injected
-          humour, or randomised words which don't look even
-        </p>
-        <button>Explore More</button>
-      </div>
-    </section>
-    <!-- features section -->
-    <section class="features-section">
-      <!-- features text -->
-      <div class="features-text">
-        <h2>Features you will love & enjoy</h2>
-        <p>
-          There are many variations of passages of Lorem Ipsum available, but
-          the majority have suffered alteration in some form, by injected
-          humour, or randomised words which don't look even
-        </p>
-        <!-- feature -->
-        <div class="feature">
-          <h4>Dexktop & Mobile Version</h4>
+    <!-- main section -->
+    <main>
+      <!-- quick-list section -->
+      <section class="quick-list">
+        <div class="quick-list-img">
+          <img src="./assects/team1.png" alt="" />
+          <img src="./assects/team2.png" alt="" />
+          <img src="./assects/team3.png" alt="" />
+          <img src="./assects/team4.png" alt="" />
+        </div>
+        <div class="quick-list-text">
+          <h3>
+            <span class="dark">Quick list</span>
+            <span class="black">of Our</span>
+            <span class="orange">Features</span>
+          </h3>
           <p>
             There are many variations of passages of Lorem Ipsum available, but
             the majority have suffered alteration in some form, by injected
-            humour, or randomised...........
+            humour, or randomised words which don't look even
           </p>
+          <button>Explore More</button>
         </div>
-        <div class="feature">
-          <h4>Drag & Drop Builder</h4>
+      </section>
+      <!-- features section -->
+      <section class="features-section">
+        <!-- features text -->
+        <div class="features-text">
+          <h2>Features you will love & enjoy</h2>
           <p>
             There are many variations of passages of Lorem Ipsum available, but
             the majority have suffered alteration in some form, by injected
-            humour, or randomised...........
+            humour, or randomised words which don't look even
           </p>
+          <!-- feature -->
+          <div class="feature">
+            <h4>Dexktop & Mobile Version</h4>
+            <p>
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised...........
+            </p>
+          </div>
+          <div class="feature">
+            <h4>Drag & Drop Builder</h4>
+            <p>
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised...........
+            </p>
+          </div>
+          <div class="feature">
+            <h4>Awesome Modern Design</h4>
+            <p>
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised...........
+            </p>
+          </div>
+          <div class="feature">
+            <h4>Super Easy to Edit</h4>
+            <p>
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised...........
+            </p>
+          </div>
         </div>
-        <div class="feature">
-          <h4>Awesome Modern Design</h4>
+        <!-- feature img -->
+        <div class="feature-img">
+          <img src="./assects/architect.png" alt="" />
+          <div class="experience">
+            <h3>10+ Years</h3>
+            <span>Experience</span>
+          </div>
+        </div>
+      </section>
+      <!-- facts section -->
+      <section class="facts">
+        <div class="facts-text">
+          <h2>Some Facts</h2>
           <p>
             There are many variations of passages of Lorem Ipsum available, but
-            the majority have suffered alteration in some form, by injected
-            humour, or randomised...........
+            the majority have suffered alteration.
           </p>
         </div>
-        <div class="feature">
-          <h4>Super Easy to Edit</h4>
-          <p>
-            There are many variations of passages of Lorem Ipsum available, but
-            the majority have suffered alteration in some form, by injected
-            humour, or randomised...........
-          </p>
+        <div class="facts-card">
+          <div class="fact-card">
+            <img src="./assects/icons/ribon.png" alt="" />
+            <h3>54</h3>
+            <span>Awards Winnings</span>
+          </div>
+          <div class="fact-card">
+            <img src="./assects/icons/projects.png" alt="" />
+            <h3>1458</h3>
+            <span>Project Finished</span>
+          </div>
+          <div class="fact-card">
+            <img src="./assects/icons/customers.png" alt="" />
+            <h3>590</h3>
+            <span>Clients Worked</span>
+          </div>
+          <div class="fact-card">
+            <img src="./assects/icons/email.png" alt="" />
+            <h3>22578</h3>
+            <span>Email Send</span>
+          </div>
         </div>
-      </div>
-      <!-- feature img -->
-      <div class="feature-img">
-        <img src="./assects/architect.png" alt="" />
-        <div class="experience">
-          <h3>10+ Years</h3>
-          <span>Experience</span>
-        </div>
-      </div>
-    </section>
-    <!-- facts section -->
-    <section class="facts">
-      <div class="facts-text">
-        <h2>Some Facts</h2>
+      </section>
+      <!-- sponspors section -->
+      <section class="sponsors-section">
+        <h2>Our Sponsors</h2>
         <p>
           There are many variations of passages of Lorem Ipsum available, but
           the majority have suffered alteration.
         </p>
-      </div>
-      <div class="facts-card">
-        <div class="fact-card">
-          <img src="./assects/icons/ribon.png" alt="" />
-          <h3>54</h3>
-          <span>Awards Winnings</span>
+        <div class="sponsors-img">
+          <img src="./assects/sponsors/spotify.png" alt="" />
+          <img src="./assects/sponsors/amazon.png" alt="" />
+          <img src="./assects/sponsors/google.png" alt="" />
+          <img src="./assects/sponsors/telerama.png" alt="" />
+          <img src="./assects/sponsors/figma.png" alt="" />
         </div>
-        <div class="fact-card">
-          <img src="./assects/icons/projects.png" alt="" />
-          <h3>1458</h3>
-          <span>Project Finished</span>
-        </div>
-        <div class="fact-card">
-          <img src="./assects/icons/customers.png" alt="" />
-          <h3>590</h3>
-          <span>Clients Worked</span>
-        </div>
-        <div class="fact-card">
-          <img src="./assects/icons/email.png" alt="" />
-          <h3>22578</h3>
-          <span>Email Send</span>
-        </div>
-      </div>
-    </section>
+      </section>
+    </main>
+    <footer>
+      <section class="footer">
+        All rights reserved copyright@2023 startup landing page design
+      </section>
+    </footer>
   </body>
 </html>
