added some correction for responsative

--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
         </div>
       </section>
     </main>
+    <!-- footer section -->
     <footer>
       <section class="footer">
         All rights reserved copyright@2023 startup landing page design
